--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,5 +6,5 @@
     <color name="backgroundColor">#424242</color>
     <color name="primaryColor">#7ac794</color>
     <color name="incomeColor">#7ac794</color>
-    <color name="expenseColor">#f7878b</color>
+    <color name="expenseColor">#eb514e</color>
 </resources>
