--- a/app/src/main/res/layout/activity_homepage.xml
+++ b/app/src/main/res/layout/activity_homepage.xml
@@ -29,120 +29,120 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <ImageButton
-            android:id="@+id/imageButton2"
+            android:id="@+id/btn1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/sport"
-            app:layout_constraintBottom_toTopOf="@+id/imageButton3"
+            app:layout_constraintBottom_toTopOf="@+id/btn12"
             app:layout_constraintEnd_toStartOf="@+id/imageView3"
-            app:layout_constraintStart_toStartOf="@+id/imageButton3"
+            app:layout_constraintStart_toStartOf="@+id/btn12"
             app:layout_constraintTop_toTopOf="parent" />
 
         <ImageButton
-            android:id="@+id/imageButton6"
+            android:id="@+id/btn4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/restauracja"
-            app:layout_constraintBottom_toTopOf="@+id/imageButton7"
-            app:layout_constraintEnd_toEndOf="@+id/imageButton7"
+            app:layout_constraintBottom_toTopOf="@+id/btn5"
+            app:layout_constraintEnd_toEndOf="@+id/btn5"
             app:layout_constraintStart_toEndOf="@+id/imageView3"
             app:layout_constraintTop_toTopOf="parent" />
 
         <ImageButton
-            android:id="@+id/imageButton7"
+            android:id="@+id/btn5"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/kosmetyki"
-            app:layout_constraintBottom_toTopOf="@+id/imageButton8"
+            app:layout_constraintBottom_toTopOf="@+id/btn6"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/imageView3"
-            app:layout_constraintTop_toBottomOf="@+id/imageButton6" />
+            app:layout_constraintTop_toBottomOf="@+id/btn4" />
 
         <ImageButton
-            android:id="@+id/imageButton8"
+            android:id="@+id/btn6"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/media"
-            app:layout_constraintBottom_toTopOf="@+id/imageButton9"
+            app:layout_constraintBottom_toTopOf="@+id/btn7"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/imageView3"
-            app:layout_constraintTop_toBottomOf="@+id/imageButton7" />
+            app:layout_constraintTop_toBottomOf="@+id/btn5" />
 
         <ImageButton
-            android:id="@+id/imageButton9"
+            android:id="@+id/btn7"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/taxi"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="@+id/imageButton8"
+            app:layout_constraintEnd_toEndOf="@+id/btn6"
             app:layout_constraintStart_toEndOf="@+id/imageView3"
-            app:layout_constraintTop_toBottomOf="@+id/imageButton8" />
+            app:layout_constraintTop_toBottomOf="@+id/btn6" />
 
         <ImageButton
-            android:id="@+id/imageButton3"
+            android:id="@+id/btn12"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/ubrania"
-            app:layout_constraintBottom_toTopOf="@+id/imageButton4"
+            app:layout_constraintBottom_toTopOf="@+id/btn11"
             app:layout_constraintEnd_toStartOf="@+id/imageView3"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/imageButton2" />
+            app:layout_constraintTop_toBottomOf="@+id/btn1" />
 
         <ImageButton
-            android:id="@+id/imageButton4"
+            android:id="@+id/btn11"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/transport"
-            app:layout_constraintBottom_toTopOf="@+id/imageButton5"
+            app:layout_constraintBottom_toTopOf="@+id/btn10"
             app:layout_constraintEnd_toStartOf="@+id/imageView3"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/imageButton3" />
+            app:layout_constraintTop_toBottomOf="@+id/btn12" />
 
         <ImageButton
-            android:id="@+id/imageButton5"
+            android:id="@+id/btn10"
             android:layout_width="45dp"
             android:layout_height="45dp"
             android:background="@drawable/zdrowie"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/imageView3"
-            app:layout_constraintStart_toStartOf="@+id/imageButton4"
-            app:layout_constraintTop_toBottomOf="@+id/imageButton4" />
+            app:layout_constraintStart_toStartOf="@+id/btn11"
+            app:layout_constraintTop_toBottomOf="@+id/btn11" />
 
         <ImageButton
-            android:id="@+id/imageButton10"
+            android:id="@+id/btn9"
             android:layout_width="45dp"
             android:layout_height="45dp"
             android:background="@drawable/zwierzeta"
-            app:layout_constraintBottom_toBottomOf="@+id/imageButton5"
-            app:layout_constraintEnd_toStartOf="@+id/imageButton11"
-            app:layout_constraintStart_toEndOf="@+id/imageButton5" />
+            app:layout_constraintBottom_toBottomOf="@+id/btn10"
+            app:layout_constraintEnd_toStartOf="@+id/btn8"
+            app:layout_constraintStart_toEndOf="@+id/btn10" />
 
         <ImageButton
-            android:id="@+id/imageButton13"
+            android:id="@+id/btn2"
             android:layout_width="wrap_content"
             android:layout_height="45dp"
             android:background="@drawable/dom"
-            app:layout_constraintBottom_toBottomOf="@+id/imageButton2"
-            app:layout_constraintEnd_toStartOf="@+id/imageButton14"
-            app:layout_constraintStart_toEndOf="@+id/imageButton2" />
+            app:layout_constraintBottom_toBottomOf="@+id/btn1"
+            app:layout_constraintEnd_toStartOf="@+id/btn3"
+            app:layout_constraintStart_toEndOf="@+id/btn1" />
 
         <ImageButton
-            android:id="@+id/imageButton14"
+            android:id="@+id/btn3"
             android:layout_width="wrap_content"
             android:layout_height="45dp"
             android:background="@drawable/rozrywka"
-            app:layout_constraintBottom_toBottomOf="@+id/imageButton2"
-            app:layout_constraintEnd_toStartOf="@+id/imageButton6"
-            app:layout_constraintStart_toEndOf="@+id/imageButton13" />
+            app:layout_constraintBottom_toBottomOf="@+id/btn1"
+            app:layout_constraintEnd_toStartOf="@+id/btn4"
+            app:layout_constraintStart_toEndOf="@+id/btn2" />
 
         <ImageButton
-            android:id="@+id/imageButton11"
+            android:id="@+id/btn8"
             android:layout_width="45dp"
             android:layout_height="45dp"
             android:background="@drawable/zywnosc"
-            app:layout_constraintBottom_toBottomOf="@+id/imageButton9"
-            app:layout_constraintEnd_toStartOf="@+id/imageButton9"
-            app:layout_constraintStart_toEndOf="@+id/imageButton10" />
+            app:layout_constraintBottom_toBottomOf="@+id/btn7"
+            app:layout_constraintEnd_toStartOf="@+id/btn7"
+            app:layout_constraintStart_toEndOf="@+id/btn9" />
 
         <ImageView
             android:id="@+id/imageView3"
@@ -150,10 +150,10 @@
             android:layout_height="0dp"
             android:layout_marginStart="60dp"
             android:layout_marginEnd="60dp"
-            app:layout_constraintBottom_toTopOf="@+id/imageButton10"
+            app:layout_constraintBottom_toTopOf="@+id/btn9"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/imageButton13"
+            app:layout_constraintTop_toBottomOf="@+id/btn2"
             app:srcCompat="@drawable/chart" />
 
         <TextView
@@ -195,7 +195,7 @@
         app:layout_constraintStart_toStartOf="parent">
 
         <Button
-            android:id="@+id/addIncomeButton"
+            android:id="@+id/addIncome"
             android:layout_width="85dp"
             android:layout_height="85dp"
             android:layout_marginEnd="50dp"
@@ -208,7 +208,7 @@
             app:layout_constraintEnd_toEndOf="parent" />
 
         <Button
-            android:id="@+id/addIncomeButton2"
+            android:id="@+id/addExpense"
             android:layout_width="85dp"
             android:layout_height="85dp"
             android:layout_marginStart="50dp"
