--- a/app/src/main/res/layout/activity_transaction_manager.xml
+++ b/app/src/main/res/layout/activity_transaction_manager.xml
@@ -85,7 +85,7 @@
         android:text="="
         android:textColor="@android:color/background_light"
         android:textSize="30sp"
-        app:layout_constraintBottom_toTopOf="@+id/button19"
+        app:layout_constraintBottom_toTopOf="@+id/submitButton"
         app:layout_constraintEnd_toStartOf="@+id/btnDot"
         app:layout_constraintStart_toEndOf="@+id/btnDot3" />
 
@@ -264,7 +264,7 @@
     <TextView
         android:id="@+id/textView12"
         android:layout_width="0dp"
-        android:layout_height="50sp"
+        android:layout_height="60sp"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp"
         android:background="@color/primaryColor"
@@ -279,7 +279,7 @@
         app:layout_constraintTop_toBottomOf="@+id/dateTextView" />
 
     <Button
-        android:id="@+id/button19"
+        android:id="@+id/submitButton"
         android:layout_width="0dp"
         android:layout_height="65sp"
         android:layout_marginStart="10dp"
@@ -289,6 +289,18 @@
         android:text="Wybierz kategorię"
         android:textColor="@android:color/background_light"
         android:textSize="15sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Spinner
+        android:id="@+id/categoriesList"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="10dp"
+        android:dropDownWidth="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
