--- a/app/src/main/res/layout/activity_transaction_list.xml
+++ b/app/src/main/res/layout/activity_transaction_list.xml
@@ -3,6 +3,7 @@
     android:id="@+id/transactions"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/backgroundColor"
     android:gravity="center_horizontal"
     android:orientation="vertical"
     android:padding="15dp" />
