--- a/app/src/main/res/layout/activity_transaction_manager.xml
+++ b/app/src/main/res/layout/activity_transaction_manager.xml
@@ -283,12 +283,11 @@
         android:layout_width="0dp"
         android:layout_height="65dp"
         android:layout_marginStart="10dp"
-        android:layout_marginEnd="10dp"
         android:background="@drawable/square_income"
         android:text="Wybierz kategorię"
         android:textColor="@android:color/background_light"
         app:layout_constraintBottom_toBottomOf="@+id/categoriesList"
-        app:layout_constraintEnd_toStartOf="@+id/calcClear"
+        app:layout_constraintEnd_toEndOf="@+id/calc0"
         app:layout_constraintStart_toStartOf="parent" />
 
     <Spinner
@@ -308,26 +307,27 @@
         android:id="@+id/calcDelete"
         android:layout_width="90dp"
         android:layout_height="65dp"
-        android:layout_marginEnd="10dp"
+        android:layout_marginStart="1dp"
         android:layout_marginBottom="10dp"
         android:background="@drawable/square_income"
         android:src="@drawable/ic_backspace_black_24dp"
         android:textColor="@android:color/background_light"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="@+id/calcDivision"
+        app:layout_constraintStart_toStartOf="@+id/calcDivision" />
 
     <Button
         android:id="@+id/calcClear"
         android:layout_width="90dp"
         android:layout_height="65dp"
-        android:layout_marginEnd="10dp"
         android:layout_marginBottom="10dp"
         android:background="@drawable/square_income"
         android:text="C"
-        android:textStyle="bold"
         android:textColor="@android:color/background_light"
         android:textSize="30sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/calcDelete" />
+        app:layout_constraintEnd_toEndOf="@+id/calcEqual"
+        app:layout_constraintStart_toStartOf="@+id/calcEqual" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
