--- a/app/src/main/res/layout/activity_transaction_manager.xml
+++ b/app/src/main/res/layout/activity_transaction_manager.xml
@@ -7,6 +7,7 @@
     android:background="@color/backgroundColor"
     tools:context=".TransactionManager">
 
+
     <TextView
         android:id="@+id/dateTextView"
         android:layout_width="wrap_content"
@@ -329,5 +330,23 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/calcEqual"
         app:layout_constraintStart_toStartOf="@+id/calcEqual" />
+
+    <Button
+        android:id="@+id/zatwierdz"
+        android:layout_width="0dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
+        android:text="Zatwierdź"
+        android:textColor="@android:color/background_light"
+        android:textSize="20dp"
+        android:background="@color/primaryColor"
+        app:layout_constraintBottom_toTopOf="@+id/calc2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editText3" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
