--- a/app/src/main/res/layout/activity_transaction_manager.xml
+++ b/app/src/main/res/layout/activity_transaction_manager.xml
@@ -245,7 +245,7 @@
         app:layout_constraintStart_toStartOf="@+id/calcDot" />
 
     <EditText
-        android:id="@+id/editText3"
+        android:id="@+id/editTextNote"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
