--- a/app/src/main/res/layout/activity_transaction_manager.xml
+++ b/app/src/main/res/layout/activity_transaction_manager.xml
@@ -337,16 +337,17 @@
     <Button
 
         android:id="@+id/categoryButton"
+        android:layout_width="0dp"
+        android:layout_height="40dp"
+        android:layout_marginStart="10dp"
+
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="10dp"
         android:background="@drawable/square_income"
         android:text="Wybierz kategorię"
         android:textColor="@android:color/background_light"
-
-        android:layout_width="0dp"
-        android:layout_height="40dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginEnd="10dp"
+        android:visibility="visible"
         app:layout_constraintBottom_toTopOf="@+id/calc2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
